[package]
name = "rxnormalizer"
version = "0.1.0"
authors = ["Rowan <r.parry@erasmusmc.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11"}
json = "0.12.4"
